--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 </head>
 
 <body>
-    <div class="row container col-2">
+    <div class="row container col-4 col-xl-2">
         <div class="containerVisor col-9" id="visor"></div>
-        <div class="containerNumbers row col-12">
-            <div onclick="setarNumero(1)" class="button col-1"> 1 </div>
-            <div onclick="setarNumero(2)" class="button col-1"> 2 </div>
-            <div onclick="setarNumero(3)" class="button col-1"> 3 </div>
-            <div onclick="setarOperador('-')" class="button buttonOperator col-1"> - </div>
-            <div onclick="setarNumero(4)" class="button col-1"> 4 </div>
-            <div onclick="setarNumero(5)" class="button col-1"> 5 </div>
-            <div onclick="setarNumero(6)" class="button col-1"> 6 </div>
-            <div onclick="setarOperador('+')" class="button buttonOperator col-1"> + </div>
-            <div onclick="setarNumero(7)" class="button col-1"> 7 </div>
-            <div onclick="setarNumero(8)" class="button col-1"> 8 </div>
-            <div onclick="setarNumero(9)" class="button col-1"> 9 </div>
-            <div onclick="setarOperador('*')" class="button buttonOperator col-1"> * </div>
-            <div onclick="setarNumero('.')" class="button col-1"> , </div>
-            <div onclick="setarNumero(0)" class="button col-1"> 0 </div>
-            <div onclick="setarResultado()" class="button buttonResult col-1"> = </div>
-            <div onclick="setarOperador('/')" class="button buttonOperator col-1"> / </div>
+        <div class="containerNumbers row col-10 col-xl-12">
+            <div onclick="setarNumero(1)" class="button col-2 col-xl-1"> 1 </div>
+            <div onclick="setarNumero(2)" class="button col-2 col-xl-1"> 2 </div>
+            <div onclick="setarNumero(3)" class="button col-2 col-xl-1"> 3 </div>
+            <div onclick="setarOperador('-')" class="button buttonOperator col-2 col-xl-1"> - </div>
+            <div onclick="setarNumero(4)" class="button col-2 col-xl-1"> 4 </div>
+            <div onclick="setarNumero(5)" class="button col-2 col-xl-1"> 5 </div>
+            <div onclick="setarNumero(6)" class="button col-2 col-xl-1"> 6 </div>
+            <div onclick="setarOperador('+')" class="button col-2 buttonOperator col-xl-1"> + </div>
+            <div onclick="setarNumero(7)" class="button col-2 col-xl-1"> 7 </div>
+            <div onclick="setarNumero(8)" class="button col-2 col-xl-1"> 8 </div>
+            <div onclick="setarNumero(9)" class="button col-2 col-xl-1"> 9 </div>
+            <div onclick="setarOperador('*')" class="button buttonOperator col-2 col-xl-1"> * </div>
+            <div onclick="setarNumero('.')" class="button col-2 col-xl-1"> , </div>
+            <div onclick="setarNumero(0)" class="button col-2 col-xl-1"> 0 </div>
+            <div onclick="setarResultado()" class="button buttonResult col-2 col-xl-1"> = </div>
+            <div onclick="setarOperador('/')" class="button buttonOperator col-2 col-xl-1"> / </div>
         </div>
     </div>
 </body>
